Se añade carpeta de script y archivo de paleta de colores, se elimina archivos home, login y registro duplicados

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -3,7 +3,7 @@
     <div class="row pt-5">
         <div class="col-lg-4 col-md-6 mb-5">
             <a href="/" class="navbar-brand">
-                <h1 class="text-primary"><span class="text-white">ERGO</span>RICE</h1>
+                <h1 class="text-primary"><span class="text-white">ERGO</span>TECH</h1>
             </a>
             <p>Realiza evaluaciones de posturas ergonómicas de forma rápida y sencilla.</p>
         </div>
