Se eliminan archivos antiguos, se modifica métodos de evaluación

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>{% block title %}ERGOTECH{% endblock %}</title>
     {% block head %}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/register.css') }}">
@@ -31,6 +32,9 @@
     {% endblock %}
 </head>
 <body class="bg-light">
+    <!-- Topbar Start -->
+    {% include 'topbar.html' %}
+     <!-- Topbar End -->  
     <!-- Navbar -->
     {% include 'navbar.html' %}
 
