--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,4 +1,8 @@
 <!-- templates/navbar.html -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
 <div class="container-fluid position-relative nav-bar p-0">
     <div class="container-lg position-relative p-0 px-lg-3" style="z-index: 9;">
         <nav class="navbar navbar-expand-lg bg-light navbar-light shadow-lg py-3 py-lg-0 pl-3 pl-lg-5">
@@ -15,12 +19,12 @@
             <div class="collapse navbar-collapse justify-content-between px-3" id="navbarCollapse">
                 <div class="navbar-nav ml-auto py-0">
                     <a href="/" class="nav-item nav-link active">Home</a>
-                    <a href="/manual" class="nav-item nav-link">Manual</a>
-                    <a href="/ejemplos" class="nav-item nav-link">Ejemplos</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Métodos de Evaluación</a>
                         <div class="dropdown-menu border-0 rounded-0 m-0">
-                            <a href="/info_ocra" class="dropdown-item">OCRA</a>
+                            <a href="info_ocra" class="dropdown-item">OCRA</a>
+                            <a href="info_ocra" class="dropdown-item">OWAS</a>
+                            <a href="info_ocra" class="dropdown-item">NIOSH</a>
                         </div>
                     </div>
                     <a href="/registro" class="nav-item nav-link">Registrarse</a>
