--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -23,7 +23,7 @@
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Métodos de Evaluación</a>
                         <div class="dropdown-menu border-0 rounded-0 m-0">
                             <a href="info_ocra" class="dropdown-item">OCRA</a>
-                            <a href="info_ocra" class="dropdown-item">OWAS</a>
+                            <a href="info_reba" class="dropdown-item">REBA</a>
                             <a href="info_ocra" class="dropdown-item">NIOSH</a>
                         </div>
                     </div>
