Avance 90% logica de analisis de video, objetos DB

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -19,12 +19,13 @@
             <div class="collapse navbar-collapse justify-content-between px-3" id="navbarCollapse">
                 <div class="navbar-nav ml-auto py-0">
                     <a href="/" class="nav-item nav-link active">Home</a>
+                    <a href="/" class="nav-item nav-link active">CheckList OCRA</a>
                     <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Métodos de Evaluación</a>
+                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Factores</a>
                         <div class="dropdown-menu border-0 rounded-0 m-0">
-                            <a href="info_ocra" class="dropdown-item">OCRA</a>
-                            <a href="info_reba" class="dropdown-item">REBA</a>
-                            <a href="info_ocra" class="dropdown-item">NIOSH</a>
+                            <a href="info_ocra" class="dropdown-item">Factor Fuerza</a>
+                            <a href="info_reba" class="dropdown-item">Factor recuperación</a>
+                            <a href="info_ocra" class="dropdown-item">Factor Frecuencia</a>
                         </div>
                     </div>
                     <a href="/registro" class="nav-item nav-link">Registrarse</a>
