1er intento de migrar el cuadernode jupyter a las pantallas

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -28,6 +28,7 @@
                             <a href="info_ocra" class="dropdown-item">Factor Frecuencia</a>
                         </div>
                     </div>
+                    <a href="/subir_video" class="nav-item nav-link">Analizar Video</a>
                     <a href="/registro" class="nav-item nav-link">Registrarse</a>
                     <a href="/login" class="nav-item nav-link">Iniciar sesión</a>
                 </div>
