--- a/templates/login.html
+++ b/templates/login.html
@@ -6,7 +6,7 @@
 <div class="row">
     <div class="col-lg-6 mx-auto">
         <h2 class="my-4 text-center">Iniciar sesión</h2>
-        <form action="{{ url_for('validar_login') }}" method="POST">
+        <form action="{{ url_for('login_validator') }}" method="POST">
             <div class="form-group">
                 <label for="email">Correo de Usuario:</label>
                 <input type="text" class="form-control" id="email" name="email" required>
@@ -17,7 +17,7 @@
             </div>
             <button type="submit" class="btn btn-primary btn-block">Iniciar sesión</button>
         </form>
-        <p class="mt-3 text-center">¿No tienes una cuenta? <a href="{{ url_for('registro') }}">Regístrate aquí</a></p>
+        <p class="mt-3 text-center">¿No tienes una cuenta? <a href="{{ url_for('registro_validator') }}">Regístrate aquí</a></p>
         <div id="mensaje-container" style="font-weight: bold;">
             {% with messages = get_flashed_messages(with_categories=true) %}
                 {% if messages %}
