--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h4 class="text-white text-uppercase mb-md-3">ERGONOMÍA Y TECNOLOGÍA</h4>
-                            <h1 class="display-3 text-white mb-md-4">Evalúa posturas ergonómicas con Módelos como OCRA, OWAS</h1>
+                            <h1 class="display-3 text-white mb-md-4">Evalúa posturas ergonómicas usando el Check List OCRA</h1>
                             <a href="/login" class="btn btn-primary py-md-3 px-md-5 mt-2">Empieza Ahora!</a>
                         </div>
                     </div>
@@ -77,7 +77,7 @@
                     <div class="about-text bg-white p-4 p-lg-5 my-lg-5">
                         <h6 class="text-primary text-uppercase" style="letter-spacing: 5px;">Sobre ERGOTECH</h6>
                         <h1 class="mb-3">Una Forma Automátizada Para Detectar Posturas</h1>
-                        <p>Selecciona el método de evaluación, sube el video de la persona que deseas evaluar y luego ERGOTECH te facilita los resultados automáticamente</p>
+                        <p>Ingresa al sistema, sube el video de la persona que deseas evaluar y luego ERGOTECH te facilita los resultados automáticamente</p>
                         <div class="row mb-4">
                             <div class="col-6">
                                 <img class="img-fluid" src="{{ url_for('static', filename='imagenes/info-2.jpeg') }}" alt="">
