--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -19,18 +19,19 @@
             <div class="collapse navbar-collapse justify-content-between px-3" id="navbarCollapse">
                 <div class="navbar-nav ml-auto py-0">
                     <a href="/" class="nav-item nav-link active">Home</a>
-                    <a href="/" class="nav-item nav-link active">CheckList OCRA</a>
-                    <div class="nav-item dropdown">
+                    <a href="/info_ocra" class="nav-item nav-link active">CheckList OCRA</a>
+                    <!--<div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Factores</a>
-                        <div class="dropdown-menu border-0 rounded-0 m-0">
+                         <div class="dropdown-menu border-0 rounded-0 m-0">
                             <a href="info_ocra" class="dropdown-item">Factor Fuerza</a>
                             <a href="info_reba" class="dropdown-item">Factor recuperación</a>
                             <a href="info_ocra" class="dropdown-item">Factor Frecuencia</a>
-                        </div>
-                    </div>
-                    <a href="/subir_video" class="nav-item nav-link">Analizar Video</a>
+                        </div> 
+                    </div>-->
+                    <!-- <a href="/cargar_video" class="nav-item nav-link">Analizar Video</a> -->
                     <a href="/registro" class="nav-item nav-link">Registrarse</a>
                     <a href="/login" class="nav-item nav-link">Iniciar sesión</a>
+                    <!-- <a href="/registro_empleado" class="nav-item nav-link">Registro de empleado</a> -->
                 </div>
             </div>
         </nav>
