--- a/templates/registro.html
+++ b/templates/registro.html
@@ -9,7 +9,7 @@
             <!-- <h2 class="my-4">Registro</h2>
             <img src="{{ url_for('static', filename='imagenes/regis1.png') }}" alt="Image" class="small-image"> -->
             <h2 class="my-4 d-flex align-items-center">
-                <img src="{{ url_for('static', filename='imagenes/regis1.png') }}" alt="Image" class="small-image mr-2">
+                <img src="{{ url_for('static', filename='imagenes/registro.png') }}" alt="Image" class="small-image mr-2">
                 Registro
             </h2>
               
